--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     content="CodePilot: Write, Run, Share Code Instantly | C++, C, Python, Java, HTML, CSS, JS" />
   <meta property="og:description"
     content="CodePilot is a free online code editor that lets you write, run, and share code in C++, C, Python, Java, HTML, CSS, and JavaScript instantly. No downloads or setups required!  Auto Complete with suggestions and Formatters" />
-  <meta property="og:url" content="https://codyssey-ide.vercel.app/" />
+  <meta property="og:url" content="" />
   <meta property="og:image" content="/icons/favicon-32x32.png" />
   <meta property="twitter:title"
     content="CodePilot: Write, Run, Share Code Instantly | C++, C, Python, Java, HTML, CSS, JS" />
